[gd_scene load_steps=22 format=3 uid="uid://re0s6jd8s4q5"]

[ext_resource type="Script" uid="uid://cpymjpg25v0ol" path="res://lib/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://dhba8oc01ecnt" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://dro62qp73sg5s" path="res://lib/minimap.gd" id="3_sugp2"]
[ext_resource type="Texture2D" uid="uid://c0xjekcouim75" path="res://assets/UI/pngtree-blank-round-sticker-template-png-image_4684569.png" id="4_tbgi4"]
[ext_resource type="Shader" uid="uid://dw0d7du1f0s64" path="res://scenes/main.gdshader" id="5_o6xl0"]
[ext_resource type="Texture2D" uid="uid://yakytfek65jh" path="res://assets/UI/kenney_ui-pack-adventure/Vector/minimap_ring_brown_detail.svg" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://b3ipdjqis6cv2" path="res://assets/UI/kenney_ui-pack-adventure/Vector/button_red.svg" id="7_choun"]
[ext_resource type="Texture2D" uid="uid://dgxooo8ixqjh8" path="res://assets/UI/kenney_ui-pack-adventure/Vector/banner_hanging.svg" id="7_ya4ey"]
[ext_resource type="Shader" uid="uid://cn30sohqrcmiw" path="res://scenes/blur.gdshader" id="8_a8y0u"]
[ext_resource type="Texture2D" uid="uid://c4t52dhj42t5w" path="res://assets/UI/kenney_ui-pack-adventure/PNG/Double/pattern_grid_paper.png" id="8_eb6dy"]
[ext_resource type="FontFile" uid="uid://qrj2h620hcb3" path="res://assets/Fonts/Marcellus/Marcellus-Regular.ttf" id="8_ya4ey"]
[ext_resource type="Texture2D" uid="uid://81oqny8x44ft" path="res://assets/UI/kenney_ui-pack-adventure/Vector/button_brown.svg" id="9_eb6dy"]
[ext_resource type="Texture2D" uid="uid://1dwq5hqi11hv" path="res://assets/textures/white.png" id="9_jkv2x"]
[ext_resource type="Texture2D" uid="uid://27tm2ht5wuwn" path="res://assets/UI/kenney_ui-pack-adventure/PNG/Default/banner_classic_curtain.png" id="10_trceg"]
[ext_resource type="Texture2D" uid="uid://big4ck56qnkgu" path="res://assets/UI/kenney_ui-pack-adventure/Vector/round_damaged_brown.svg" id="12_jkv2x"]
[ext_resource type="Texture2D" uid="uid://0xybxw8aw6np" path="res://assets/UI/coeur_plein.png" id="13_jbj1t"]
[ext_resource type="Texture2D" uid="uid://08h4es14a00p" path="res://assets/UI/coeur_vide.png" id="14_muem4"]

[sub_resource type="Environment" id="Environment_a8y0u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tipki"]
shader = ExtResource("5_o6xl0")
shader_parameter/radius = 0.5

[sub_resource type="ViewportTexture" id="ViewportTexture_tbgi4"]
viewport_path = NodePath("HUD/MinimapViewPort")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jbj1t"]
shader = ExtResource("8_a8y0u")
shader_parameter/amount = 1.034

[node name="Main" type="Node3D"]
process_mode = 3
script = ExtResource("1_0wfyh")

[node name="Player" parent="." instance=ExtResource("1_o5qli")]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.547073, 0.496864, -0.0856476)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.995
anchor_bottom = 1.0
offset_right = 9.59998
mouse_filter = 2

[node name="MinimapViewPort" type="SubViewport" parent="HUD"]
transparent_bg = true
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="HUD/MinimapViewPort" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 200, 0)
environment = SubResource("Environment_a8y0u")
projection = 1
size = 60.0
script = ExtResource("3_sugp2")
player = NodePath("../../../Player")

[node name="MinimapMask" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 1523.0
offset_top = 43.0
offset_right = 1862.0
offset_bottom = 407.0
texture = ExtResource("4_tbgi4")
expand_mode = 1
stretch_mode = 5

[node name="MinimapContent" type="TextureRect" parent="HUD/MinimapMask"]
material = SubResource("ShaderMaterial_tipki")
clip_contents = true
layout_mode = 0
offset_left = -82.0
offset_top = -112.0
offset_right = 437.0
offset_bottom = 432.0
texture = SubResource("ViewportTexture_tbgi4")
stretch_mode = 5

[node name="SBG_Minimap" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 1544.0
offset_top = 72.0
offset_right = 1846.0
offset_bottom = 350.0
texture = ExtResource("5_tefeu")
stretch_mode = 5

[node name="TextInfo" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -112.0
offset_right = 192.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_ya4ey")

[node name="LabelInfosText" type="Label" parent="HUD/TextInfo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -72.0
offset_right = 120.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_ya4ey")
text = "Infos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discussion" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 680.0
offset_top = 184.0
offset_right = 1240.0
offset_bottom = 789.0
texture = ExtResource("8_eb6dy")

[node name="NextInfo" type="TextureRect" parent="HUD/Discussion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = 105.5
offset_right = 248.0
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_choun")

[node name="NextText" type="Label" parent="HUD/Discussion/NextInfo"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -41.5
offset_right = 232.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 30
text = "Quitter le jeu"
vertical_alignment = 1

[node name="DiscussionName" type="TextureRect" parent="HUD/Discussion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -336.5
offset_right = 298.0
offset_bottom = -182.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_trceg")
expand_mode = 1

[node name="Label" type="Label" parent="HUD/Discussion/DiscussionName"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -35.0
offset_right = 55.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 45
text = "SenderName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscussionContent" type="Label" parent="HUD/Discussion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -159.5
offset_right = 256.0
offset_bottom = 193.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 20
text = "SenderName"
autowrap_mode = 2

[node name="Quit" type="TextureRect" parent="HUD/Discussion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = 201.5
offset_right = 248.0
offset_bottom = 284.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_choun")

[node name="Quit" type="Label" parent="HUD/Discussion/Quit"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -41.5
offset_right = 232.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 30
text = "X : Partir"
vertical_alignment = 1

[node name="LevelInfo" type="TextureRect" parent="HUD"]
layout_mode = 1
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("12_jkv2x")

[node name="Text" type="Label" parent="HUD/LevelInfo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 40
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 144.0
offset_top = 32.0
offset_right = 608.0
offset_bottom = 96.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("8_ya4ey")
rounded = true
show_percentage = false

[node name="HealthControl" type="Control" parent="HUD"]
anchors_preset = 0
offset_top = 128.0
offset_right = 264.0
offset_bottom = 1080.0

[node name="Heath_Full1" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 120.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Empty1" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 120.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty2" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 240.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty3" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 248.0
offset_right = 128.0
offset_bottom = 360.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty4" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 368.0
offset_right = 128.0
offset_bottom = 480.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty5" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 488.0
offset_right = 128.0
offset_bottom = 600.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty6" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 608.0
offset_right = 128.0
offset_bottom = 720.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty7" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 728.0
offset_right = 128.0
offset_bottom = 840.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty8" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_left = 136.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 120.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty9" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_left = 136.0
offset_top = 128.0
offset_right = 264.0
offset_bottom = 240.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Empty10" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_left = 136.0
offset_top = 248.0
offset_right = 264.0
offset_bottom = 360.0
texture = ExtResource("14_muem4")
expand_mode = 2

[node name="Heath_Full2" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 248.0
offset_right = 128.0
offset_bottom = 360.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full3" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 240.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full4" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 368.0
offset_right = 128.0
offset_bottom = 480.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full5" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 488.0
offset_right = 128.0
offset_bottom = 600.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full6" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 608.0
offset_right = 128.0
offset_bottom = 720.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full7" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_top = 728.0
offset_right = 128.0
offset_bottom = 840.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full8" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_left = 136.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 120.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full9" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_left = 136.0
offset_top = 128.0
offset_right = 264.0
offset_bottom = 240.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Heath_Full10" type="TextureRect" parent="HUD/HealthControl"]
layout_mode = 0
offset_left = 136.0
offset_top = 248.0
offset_right = 264.0
offset_bottom = 360.0
texture = ExtResource("13_jbj1t")
expand_mode = 2

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="TextureRect" parent="Menu"]
material = SubResource("ShaderMaterial_jbj1t")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_jkv2x")

[node name="TextureRect4" type="TextureRect" parent="Menu"]
layout_mode = 0
offset_left = 680.0
offset_top = 184.0
offset_right = 1240.0
offset_bottom = 789.0
texture = ExtResource("8_eb6dy")

[node name="ButtonQuitImage" type="TextureRect" parent="Menu/TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 201.5
offset_right = 130.0
offset_bottom = 284.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_choun")

[node name="ButtonQuit" type="Button" parent="Menu/TextureRect4/ButtonQuitImage"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.468
offset_top = -50.94
offset_right = 124.468
offset_bottom = 50.94
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_pressed = true
action_mode = 0
text = "Quitter le jeu
"
flat = true

[node name="ButtonUnpauseImage" type="TextureRect" parent="Menu/TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -150.5
offset_right = 130.03
offset_bottom = -67.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_eb6dy")

[node name="ButtonUnpause" type="Button" parent="Menu/TextureRect4/ButtonUnpauseImage"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.468
offset_top = -50.94
offset_right = 124.468
offset_bottom = 50.94
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_pressed = true
action_mode = 0
text = "Reprendre"
flat = true

[node name="PauseText Image" type="TextureRect" parent="Menu/TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -336.5
offset_right = 298.0
offset_bottom = -182.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_trceg")
expand_mode = 1

[node name="Label" type="Label" parent="Menu/TextureRect4/PauseText Image"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -35.0
offset_right = 55.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_ya4ey")
theme_override_font_sizes/font_size = 45
text = "Pause"

[connection signal="interaction_detected" from="Player" to="." method="_on_player_interaction_detected"]
[connection signal="interaction_released" from="Player" to="." method="_on_player_interaction_released"]
[connection signal="pressed" from="Menu/TextureRect4/ButtonQuitImage/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="Menu/TextureRect4/ButtonUnpauseImage/ButtonUnpause" to="." method="_on_button_unpause_pressed"]
